[workspace]
resolver = "2"
members = [
  "interface",
  "host",
  "module",
  "shared",
  "crate_compilation_info",
  "testing/shared",
  "testing/host",
  "testing/module",
  "testing/runner",
  "testing/host_as_dylib",
  "testing/host_shared",
  "exportify",
  "export",
  "relib",
  "examples/basic_host",

  # excluded from workspace because it doesn't need default-features of relib_module crate
  # "examples/custom_global_alloc",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/xxshady/relib"
readme = "README.md"
rust-version = "1.83.0"

[workspace.metadata.release]
pre-release-commit-message = "v{{version}}"
tag = false

[workspace.dependencies]
libc = "0.2.164"
libloading = "0.8.6"
thread-id = "5.0.0"
quote = "1.0.37"
proc-macro2 = "1.0.92"
abi_stable = "0.11.3"
cfg-if = "1.0.0"

[workspace.dependencies.syn]
version = "2.0.89"
features = ["full"]
