[package]
name = "relib_internal_crate_compilation_info"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[dependencies]

[features]
build = []
normal = []
