[package]
name = "relib_export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[lib]
proc-macro = true

[dependencies]
relib_exportify = { version = "=0.1.8", path = "../exportify" }
