[package]
name = "relib_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[lints.clippy]
unwrap_used = "forbid"

[dependencies]
libloading.workspace = true
thiserror = "2.0.3"
thread-id.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dependencies.relib_internal_shared]
version = "=0.1.8"
path = "../shared"

[dependencies.relib_interface]
version = "=0.1.8"
path = "../interface"
features = ["include"]

[dependencies.relib_internal_crate_compilation_info]
version = "=0.1.8"
path = "../crate_compilation_info"
features = ["normal"]

[build-dependencies]

[build-dependencies.relib_interface]
version = "=0.1.8"
path = "../interface"
features = ["internal", "build"]

[build-dependencies.relib_internal_shared]
version = "=0.1.8"
path = "../shared"

[build-dependencies.relib_internal_crate_compilation_info]
version = "=0.1.8"
path = "../crate_compilation_info"
features = ["build"]
