[package]
name = "relib_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[features]
unloading = ["relib_interface/unloading", "dep:thread-id"]

[lints.clippy]
unwrap_used = "forbid"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
libloading.workspace = true
thiserror = "2.0.3"

[dependencies.thread-id]
optional = true
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dependencies.relib_internal_shared]
version = "=0.3.0"
path = "../shared"

[dependencies.relib_interface]
version = "=0.3.0"
path = "../interface"
features = ["include"]

[dependencies.relib_internal_crate_compilation_info]
version = "=0.3.0"
path = "../crate_compilation_info"
features = ["normal"]

[build-dependencies]

[build-dependencies.relib_interface]
version = "=0.3.0"
path = "../interface"
features = ["internal", "build"]

[build-dependencies.relib_internal_shared]
version = "=0.3.0"
path = "../shared"

[build-dependencies.relib_internal_crate_compilation_info]
version = "=0.3.0"
path = "../crate_compilation_info"
features = ["build"]
