[package]
name = "relib_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[features]
unloading = ["relib_interface/unloading", "dep:thread-id"]
super_special_reinit_of_dbghelp = []
disable_global_alloc_warn = []

[lints.clippy]
unwrap_used = "forbid"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(relib_docs)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "relib_docs"]

[dependencies]
libloading.workspace = true
thiserror = "2.0.3"

[dependencies.thread-id]
optional = true
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-targets = "0.53.0"
minhook = "0.6.0"

[dependencies.relib_internal_shared]
version = "=0.6.2"
path = "../shared"

[dependencies.relib_interface]
version = "=0.6.2"
path = "../interface"
features = ["include"]

[dependencies.relib_internal_crate_compilation_info]
version = "=0.6.2"
path = "../crate_compilation_info"
features = ["normal"]

[build-dependencies]

[build-dependencies.relib_interface]
version = "=0.6.2"
path = "../interface"
features = ["internal", "build"]

[build-dependencies.relib_internal_shared]
version = "=0.6.2"
path = "../shared"

[build-dependencies.relib_internal_crate_compilation_info]
version = "=0.6.2"
path = "../crate_compilation_info"
features = ["build"]
