[package]
name = "relib_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[features]
default = ["public"]

build = [
  "dep:relib_internal_shared",
  "dep:prettyplease",
  "dep:proc-macro2",
  "dep:quote",
  "dep:syn",
]
include = []
internal = []
public = []

[dependencies]

[dependencies.relib_internal_shared]
optional = true
version = "=0.1.8"
path = "../shared"

[dependencies.prettyplease]
optional = true
version = "0.2.25"

[dependencies.proc-macro2]
optional = true
workspace = true

[dependencies.quote]
optional = true
workspace = true

[dependencies.syn]
optional = true
workspace = true
