[package]
name = "relib_internal_shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[dependencies]

[dependencies.relib_shared]
version = "=0.7.0"
path = "../relib_shared"

[dependencies.relib_derive]
version = "=0.7.0"
path = "../derive"
