[package]
name = "relib_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[features]
default = ["global_alloc_tracker"]
global_alloc_tracker = []

[lints.clippy]
unwrap_used = "forbid"

[dependencies]
backtrace = "0.3.74"
thread-id.workspace = true

[dependencies.relib_export]
version = "=0.1.7"
path = "../export"

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dependencies.relib_internal_shared]
version = "=0.1.7"
path = "../shared"

[dependencies.relib_interface]
version = "=0.1.7"
path = "../interface"
features = ["include"]

[dependencies.relib_internal_crate_compilation_info]
version = "=0.1.7"
path = "../crate_compilation_info"
features = ["normal"]

[build-dependencies]

[build-dependencies.relib_interface]
version = "=0.1.7"
path = "../interface"
features = ["internal", "build"]

[build-dependencies.relib_internal_shared]
version = "=0.1.7"
path = "../shared"

[build-dependencies.relib_internal_crate_compilation_info]
version = "=0.1.7"
path = "../crate_compilation_info"
features = ["build"]
