[package]
name = "relib_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"

[features]
default = ["host_global_alloc"]
unloading = ["unloading_core", "global_alloc_tracker"]
unloading_core = ["relib_interface/unloading", "dep:thread-id"]
global_alloc_tracker = []
dealloc_validation = []
host_global_alloc = []

[lints.clippy]
# unrecoverable must be used instead
unwrap_used = "forbid"
panic = "forbid"
unreachable = "forbid"
unimplemented = "forbid"
todo = "forbid"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]

[dependencies.thread-id]
optional = true
workspace = true

[dependencies.relib_export]
version = "=0.7.0"
path = "../export"

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dependencies.relib_internal_shared]
version = "=0.7.0"
path = "../internal_shared"

[dependencies.relib_interface]
version = "=0.7.0"
path = "../interface"
features = ["include"]

[dependencies.relib_internal_crate_compilation_info]
version = "=0.7.0"
path = "../crate_compilation_info"
features = ["normal"]

[dependencies.relib_shared]
version = "=0.7.0"
path = "../relib_shared"

[build-dependencies]

[build-dependencies.relib_interface]
version = "=0.7.0"
path = "../interface"
features = ["internal", "build"]

[build-dependencies.relib_internal_shared]
version = "=0.7.0"
path = "../internal_shared"

[build-dependencies.relib_internal_crate_compilation_info]
version = "=0.7.0"
path = "../crate_compilation_info"
features = ["build"]
