[package]
name = "relib"
version = "0.7.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "relib is a framework for reloadable dynamic libraries"
include = ["src", "docs.md", "../README.md", "build.rs"]
keywords = ["hot-reload", "live-reload", "dynamic-library", "plugins"]
