[package]
name = "basic_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[features]
unloading = ["relib_host/unloading"]

[dependencies.relib_host]
version = "0.1.8"
path = "../../host"
