[package]
name = "test_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[features]
unloading = ["relib_host/unloading"]

[dependencies]
libloading.workspace = true
memory-stats = "1.2.0"

[dependencies.relib_host]
version = "0.2.2"
path = "../../host"

[dependencies.test_shared]
version = "=0.2.2"
path = "../shared"

[dependencies.relib_interface]
version = "0.2.2"
path = "../../interface"
features = ["include"]

[build-dependencies.relib_interface]
version = "0.2.2"
path = "../../interface"
features = ["build"]

[build-dependencies.test_shared]
version = "=0.2.2"
path = "../shared"
