[package]
name = "test_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[features]
unloading = ["relib_host/unloading"]
no_unloading = []
ret_primitive_main = []
ret_heap_main = []
panic_main = []
exportify = []
threads_check = ["relib_host/unloading"]
before_unload_panic = ["relib_host/unloading"]
code_change = ["relib_host/unloading"]
multiple_modules = ["relib_host/unloading"]
panic_in_interface_module = []
panic_in_interface_host = []

[dependencies]
libloading.workspace = true
abi_stable.workspace = true
cfg-if.workspace = true

[dependencies.relib_host]
version = "0.3.1"
path = "../../host"

[dependencies.test_shared]
version = "=0.3.1"
path = "../shared"

[dependencies.relib_interface]
version = "0.3.1"
path = "../../interface"
features = ["include"]

[build-dependencies.relib_interface]
version = "0.3.1"
path = "../../interface"
features = ["build"]

[build-dependencies.test_shared]
version = "=0.3.1"
path = "../shared"
