[package]
name = "test_host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[features]
unloading = ["relib_host/unloading"]
no_unloading = []
ret_primitive_main = []
ret_heap_main = []
panic_main = []
exportify = []
threads_check = ["relib_host/unloading"]
before_unload_panic = ["relib_host/unloading"]
code_change = ["relib_host/unloading"]
multiple_modules = ["relib_host/unloading"]
panic_in_interface_module = []
panic_in_interface_host = []
backtrace_unloading = ["relib_host/unloading"]
backtrace_unloading_host_as_dylib = ["relib_host/unloading"]
is_already_loaded_error = ["relib_host/unloading"]
dbghelp_is_already_loaded_panic = []
dbghelp_is_already_loaded_init = []
windows_background_threads = ["relib_host/unloading"]
windows_background_threads_fail = ["relib_host/unloading"]
parallel_module_loading = []

[dependencies]
libloading.workspace = true
abi_stable.workspace = true
cfg-if.workspace = true

[dependencies.test_host_shared]
version = "=0.6.1"
path = "../host_shared"

[dependencies.relib_host]
version = "=0.6.1"
path = "../../host"

[dependencies.test_shared]
version = "=0.6.1"
path = "../shared"

[dependencies.relib_interface]
version = "=0.6.1"
path = "../../interface"
features = ["include"]

[build-dependencies.relib_interface]
version = "=0.6.1"
path = "../../interface"
features = ["build"]

[build-dependencies.test_shared]
version = "=0.6.1"
path = "../shared"
