[package]
name = "test_host_shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
libloading.workspace = true

[dependencies.relib_host]
version = "0.5.0"
path = "../../host"

[dependencies.test_shared]
version = "=0.5.0"
path = "../shared"

[dependencies.relib_interface]
version = "0.5.0"
path = "../../interface"
features = ["include"]

[build-dependencies.relib_interface]
version = "0.5.0"
path = "../../interface"
features = ["build"]

[build-dependencies.test_shared]
version = "=0.5.0"
path = "../shared"
