[package]
name = "test_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
unloading = ["relib_module/unloading"]

[dependencies]

[dependencies.relib_module]
version = "0.2.3"
path = "../../module"

[dependencies.test_shared]
version = "=0.2.3"
path = "../shared"

[dependencies.relib_interface]
version = "0.2.3"
path = "../../interface"
features = ["include"]

[build-dependencies.relib_interface]
version = "0.2.3"
path = "../../interface"
features = ["build"]

[build-dependencies.test_shared]
version = "=0.2.3"
path = "../shared"
