[package]
name = "test_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
unloading = ["relib_module/unloading"]
no_unloading = []
ret_primitive_main = []
ret_heap_main = []
panic_main = []
exportify = []
threads_check = ["relib_module/unloading"]
before_unload_panic = ["relib_module/unloading"]

code_change = ["relib_module/unloading"]
code_change_before_unload = []
code_change_leak = []

multiple_modules = ["relib_module/unloading"]
panic_in_interface_host = []
panic_in_interface_module = []

[dependencies]
abi_stable.workspace = true
cfg-if.workspace = true
thread-id.workspace = true

[dependencies.relib_module]
version = "0.3.1"
path = "../../module"

[dependencies.test_shared]
version = "=0.3.1"
path = "../shared"

[dependencies.relib_interface]
version = "0.3.1"
path = "../../interface"
features = ["include"]

[build-dependencies.relib_interface]
version = "0.3.1"
path = "../../interface"
features = ["build"]

[build-dependencies.test_shared]
version = "=0.3.1"
path = "../shared"
