[package]
name = "module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
relib_interface = { version = "0.1.0", path = "../../../interface", features = ["include"] }
relib_module = { version = "0.1.0", path = "../../../module" }
shared = { version = "0.1.0", path = "../shared" }
abi_stable.workspace = true

[build-dependencies]
relib_interface = { version = "0.1.0", path = "../../../interface", features = ["build"] }
shared = { version = "0.1.0", path = "../shared" }
