[package]
name = "main_module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/main_module.rs"

[dependencies]
main_contract = { version = "0.1.0", path = "../main_contract" }
state = { version = "0.1.0", path = "../state" }
perfect_api = { version = "0.1.0", path = "../perfect_api" }
imperfect_api = { version = "0.1.0", path = "../imperfect_api" }
relib_interface = { version = "0", path = "../../../interface", features = [
  "include",
] }

[dependencies.relib_module]
version = "0"
path = "../../../module"

features = [
  # workaround for cargo feature unification
  "unloading_core",

  "dealloc_validation",
]

[build-dependencies]
relib_interface = { version = "0", path = "../../../interface", features = [
  "build",
] }
main_contract = { version = "0.1.0", path = "../main_contract" }
