[package]
name = "module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/module.rs"

[dependencies]
main_contract = { version = "0.1.0", path = "../main_contract" }
state = { version = "0.1.0", path = "../state" }
perfect_api = { version = "0.1.0", path = "../perfect_api" }
unperfect_api = { version = "0.1.0", path = "../unperfect_api" }

[dependencies.relib_module]
version = "0"
path = "../../../module"

features = [
  # workaround for cargo feature unification
  "unloading_core",

  "dealloc_validation",
]
