[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
libloading = "0.8.6"
relib_interface = { version = "0", path = "../../../interface", features = [
  "include",
] }
shared = { version = "0.1.0", path = "../shared" }

[dependencies.relib_host]
version = "0"
path = "../../../host"
features = ["unloading"]

[build-dependencies]
relib_interface = { version = "0", path = "../../../interface", features = [
  "build",
] }
shared = { version = "0.1.0", path = "../shared" }
