[package]
name = "module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
relib_interface = { version = "0", path = "../../../interface", features = [
  "include",
] }
shared = { version = "0.1.0", path = "../shared" }

[dependencies.relib_module]
version = "0"
path = "../../../module"
features = ["unloading"]

[build-dependencies]
relib_interface = { version = "0", path = "../../../interface", features = [
  "build",
] }
shared = { version = "0.1.0", path = "../shared" }
