[package]
name = "update"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/update.rs"

[dependencies]
relib_interface = { version = "0", path = "../../../interface", features = [
  "include",
] }
update_contract = { version = "0.1.0", path = "../update_contract" }
main_contract = { version = "0.1.0", path = "../main_contract" }
state = { version = "0.1.0", path = "../state" }

[dependencies.relib_module]
version = "0"
path = "../../../module"
features = ["unloading_core"]

[build-dependencies]
relib_interface = { version = "0", path = "../../../interface", features = [
  "build",
] }
update_contract = { version = "0.1.0", path = "../update_contract" }
main_contract = { version = "0.1.0", path = "../main_contract" }
state = { version = "0.1.0", path = "../state" }
